--- a/pse-dbmodell/src/main/webapp/protected/Main.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Main.xhtml
@@ -24,7 +24,13 @@
 						<p:panel header="Activities">
 							<p:dataScroller value="#{simpleFeedController.activities}"
 								var="message" chunkSize="10" mode="inline" scrollHeight="500">
-								<ui:insert name="messageList" />
+										<h:panelGrid columns="1" style="width:100%">
+											<p:outputPanel>
+												<ui:insert name="messageList" />
+												<ui:insert name="likeButtonsMain" />
+												<ui:insert name="dialogBox" />
+											</p:outputPanel>
+										</h:panelGrid>
 							</p:dataScroller>
 						</p:panel>
 					</h:form>
