--- a/pse-dbmodell/src/main/webapp/protected/MessageDetails.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/MessageDetails.xhtml
@@ -91,7 +91,7 @@
 				</h:panelGrid>
 			</p:dataScroller>
 		</p:dialog>
-
+		<h:form>
 		<p:panel>
 			<f:facet name="header">
 				<h:outputText value="Kommentare (" />
@@ -103,8 +103,15 @@
 			<p:dataScroller
 				value="#{messageDetailsController.messageDTO.comments}"
 				var="message" chunkSize="10" mode="inline" scrollHeight="400">
-				<ui:insert name="messageList" />
+				<h:panelGrid columns="1" style="width:100%">
+					<p:outputPanel>
+						<ui:insert name="messageList" />
+						<ui:insert name="likeButtonsDetail" />
+						<ui:insert name="dialogBox" />
+					</p:outputPanel>
+				</h:panelGrid>
 			</p:dataScroller>
 		</p:panel>
+		</h:form>
 	</ui:define>
 </ui:composition>
