--- a/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
@@ -9,15 +9,24 @@
 		<p:toolbar rendered="#{loginController.isLoggedIn}">
 			<f:facet name="left">
 				<h:form>
-					<p:button value="Home" icon="ui-icon-home" href="/protected/Main.jsf"/>
-	            	<p:button value="Communities" icon="ui-icon-pencil" href="/protected/Communities.jsf"/>
-	            	<p:button value="Mitarbeiter" href="/protected/UserList.jsf"/>
-	            	<p:button value="Services" icon="ui-icon-help" href="/protected/Services.jsf" />
-	            	<p:button value="Administration" icon="ui-icon-gear" href="/protected/AdminView.jsf" rendered="#{loginController.isAdmin}" />
-	            	<span class="ui-separator">
-	                	<span class="ui-icon ui-icon-grip-dotted-vertical" />
-	            	</span>
-					<p:menuButton value="#{loginController.loggedInUsername}">
+					<p:button value="Home" icon="ui-icon-home"
+						href="/protected/Main.jsf" />
+					<p:button value="Communities" icon="ui-icon-pencil"
+						href="/protected/Communities.jsf" />
+					<p:button value="Mitarbeiter" href="/protected/UserList.jsf" />
+					<p:button value="Services" icon="ui-icon-help"
+						href="/protected/Services.jsf" />
+					<p:button value="Administration" icon="ui-icon-gear"
+						href="/protected/AdminView.jsf"
+						rendered="#{loginController.isAdmin}" />
+					<span class="ui-separator"> <span
+						class="ui-icon ui-icon-grip-dotted-vertical" />
+					</span>
+					<p:splitButton value="#{loginController.loggedInUsername}"
+						action="/protected/User.jsf">
+						<f:param name="userName"
+							value="#{loginController.loggedInUsername}" />
+						<f:param name="mode" value="view" />
 						<p:menuitem>
 							<h:link outcome="/protected/User.jsf"
 								styleClass="ui-menuitem-link ui-corner-all">
@@ -46,8 +55,8 @@
 						<p:menuitem value="Abmelden"
 							actionListener="#{loginController.logout}"
 							icon="ui-icon-arrowthickstop-1-e" />
-					</p:menuButton>
-            	</h:form>
+					</p:splitButton>
+				</h:form>
 			</f:facet>
 			<f:facet name="right">
 				<h:form id="searchform">
