--- a/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
@@ -42,16 +42,15 @@
 			     		</p:commandLink>
 			     	</ui:fragment>
 					<ui:fragment rendered="#{community.invitationOnly == true}">
-						<p:commandLink actionListener="#{communityController.subscribeCommunity}">	
-			     			<p:commandButton value="Ask community" id="askCommunity" disabled="#{communityController.isMemberOfCommunity(community.communityId)}" />
+						<p:commandLink update="communities" actionListener="#{communityController.subscribeCommunity}">	
+			     			<p:commandButton value="Ask community" id="askCommunity" disabled="#{communityController.disableAskCommunity(community.communityId)}" />
 			     			<f:param name="communityId" value="#{community.communityId}" />
 			     			<f:param name="invitationOnly" value="#{community.invitationOnly}" />
-			     			<f:param name="privateUser" value="#{community.privateUser}" />
 			     		</p:commandLink>
 			     	</ui:fragment>				
 			    </p:column>
 			    <p:column headerText="is member">
-			    	<h:outputText value="#{communityController.isMemberToString(community.communityId)}" />
+			    	<h:outputText value="#{communityController.isMemberToString()}" />
 			    </p:column>
 			</p:dataTable>
 		</h:form>
