--- a/pse-dbmodell/src/main/webapp/protected/MessageDetails.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/MessageDetails.xhtml
@@ -10,6 +10,7 @@
 			rendered="#{messageDetailsController.messageDTO == null}" />
 
 		<h:form>
+			<p:growl id="messageDetailGrowl"/>
 			<p:panel rendered="#{messageDetailsController.messageDTO ne null}">
 				<f:facet name="header">
 					<h:outputText
@@ -98,19 +99,22 @@
 				<h:outputText value="#{messageDetailsController.messageDTO.numberOfComments}"/>
 				<h:outputText value=")" />
 			</f:facet>
-			<p:fieldset id="commentArea" legend="Neuer Kommentar" toggleable="true" collapsed="#{!messageCommentController.showPanel}">
-				<p:panelGrid columns="1">
-					<p:inputText id="commentHeadline" maxlength="64" value="#{messageCommentController.headline}"/>
-					<p:inputTextarea id="commentText" rows="5" cols="40" maxlength="1024" value="#{messageCommentController.text}"/>
-					<p:commandButton id="addComment" value="Kommentar absenden" actionListener="#{messageCommentController.addComment}" >
-						<f:param name="parentMessageId" value="#{messageDetailsController.messageDTO.id}" />
-					</p:commandButton>
-				</p:panelGrid>
-			</p:fieldset>						
+			<p:fragment autoUpdate="true">
+				<p:growl id="commentGrowl" />
+				<p:fieldset id="commentArea" legend="Neuer Kommentar" toggleable="true" collapsed="#{messageCommentController.showPanel}" widgetVar="subArea">
+					<p:panelGrid columns="1">
+						<p:inputText id="commentHeadline" maxlength="64" value="#{messageCommentController.headline}" />
+						<p:inputTextarea id="commentText" rows="5" cols="40" maxlength="1024" value="#{messageCommentController.text}"/>
+						<p:commandButton id="addComment" value="Kommentar absenden" actionListener="#{messageCommentController.addComment}" resetValues="true" update="commentArea, commentHeadline, commentText, commentGrowl" oncomplete="#{messageDetailsController.reloadMessage()}">
+							<f:param name="parentMessageId" value="#{messageDetailsController.messageDTO.id}" />
+						</p:commandButton>
+					</p:panelGrid>
+				</p:fieldset>					
+			</p:fragment>	
 			<br/><br/>
-			<p:dataScroller
+			<p:dataScroller id="commentList"
 				value="#{messageDetailsController.messageDTO.comments}"
-				var="message" chunkSize="10" mode="inline" scrollHeight="400">
+				var="message" chunkSize="10" mode="inline" scrollHeight="400" autoUpdate="true">
 				<h:panelGrid columns="1" style="width:100%">
 					<p:outputPanel>
 						<ui:insert name="messageList" />
