--- a/pse-dbmodell/src/main/webapp/protected/News.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/News.xhtml
@@ -47,7 +47,7 @@
 						<p:row>
 							<p:column>
 								<p:button rendered="#{userProfileController.canEditNews}" id="editNewsBtn" value="Bearbeiten"
-									href="/protected/xperimental/AddMessage.jsf?messageId=#{news.id}">
+									href="/protected/xperimental/AddMessage.jsf?messageId=#{news.id}&amp;lockCommunity=true">
 								</p:button>
 							</p:column>
 							<p:column>
