minor name changes

--- a/pse-dbmodell/src/main/webapp/protected/Community.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Community.xhtml
@@ -10,7 +10,7 @@
 	    	<h1>Community <h:outputText value="#{communityProfileController.getSelectedCommunityName()}" /> </h1>
 	</h:form>
 		<div>
-				<p:commandLink actionListener="#{communityProfileController.onCreateNewActivitie}">	
+				<p:commandLink actionListener="#{communityProfileController.onCreateNewActivity}">	
 			     	<p:commandButton value="Community Beitrag erstellen" id="createCommunityMessage" />
 			    </p:commandLink>
 		</div>
