--- a/pse-dbmodell/src/main/webapp/protected/chat/CommunityMessageEditorTag.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/chat/CommunityMessageEditorTag.xhtml
@@ -12,7 +12,7 @@
 		<p:panelGrid>
 
 			<p:row>
-				<p:column colspan="2">Neue Nachricht eingeben für <h:outputText value="#{messageEditorController.getCommunityName()}" /> Community</p:column>
+				<p:column colspan="2">Neue Nachricht eingeben für Community <h:outputText value="#{messageEditorController.getCommunityName()}" /> </p:column>
 			</p:row>
 			<p:row>
 				<p:column></p:column>
