--- a/pse-dbmodell/src/main/webapp/protected/AdminView.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/AdminView.xhtml
@@ -6,22 +6,27 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-	
-	<h:form>
-		<h1>Requests</h1>
-		<p:dataTable var="requests" value="#{requestController.requests}" id="requests"
+    <h:form id="communitySearch">
+
+		    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+	    	<h1>Community Requests</h1>
+			<p:dataTable var="community" value="#{requestController.requests}" id="requests"
 				paginator="true" rows="10"
                	paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                	selectionMode="single" selection="#{requestController.selectedRequest}" 
-               	rowKey="#{request.requestId}"
+               	rowKey="#{community.communityId}"
 			>
-			<p:ajax event="rowSelect" listener="#{requestController.onRequestSelected}" ></p:ajax>
-			    <p:column headerText="Request Name">
-			        <h:outputText value="#{request.name}" />
+			<p:ajax event="rowSelect" listener="#{requestController.onCommunitySelected}" ></p:ajax>
+			    <p:column headerText="Community name">
+			        <h:outputText value="#{community.name}" />
 			    </p:column>
-		</p:dataTable>
-	</h:form>
-	
-	
+			    <p:column headerText="action">
+					<p:commandLink update="requests" actionListener="#{requestController.approveCommunity}">	
+			    		<p:commandButton value="Approve community" id="approveCommunity" disabled="false" />
+			   			<f:param name="communityId" value="#{community.communityId}" />
+		     		</p:commandLink>		
+			    </p:column>
+			</p:dataTable>
+		</h:form>
 	</ui:define>
 </ui:composition>
