--- a/pse-dbmodell/src/main/webapp/protected/AdminView.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/AdminView.xhtml
@@ -9,7 +9,7 @@
     <h:form id="communitySearch">
 
 		    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-	    	<h1>Community Requests</h1>
+	    	<h1>Community Anträge</h1>
 			<p:dataTable var="community" value="#{requestController.requests}" id="requests"
 				paginator="true" rows="10"
                	paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
@@ -17,14 +17,18 @@
                	rowKey="#{community.communityId}"
 			>
 			<p:ajax event="rowSelect" listener="#{requestController.onCommunitySelected}" ></p:ajax>
-			    <p:column headerText="Community name">
+			    <p:column headerText="Community Name">
 			        <h:outputText value="#{community.name}" />
 			    </p:column>
-			    <p:column headerText="action">
+			    <p:column headerText="Actions">
 					<p:commandLink update="requests" actionListener="#{requestController.approveCommunity}">	
-			    		<p:commandButton value="Approve community" id="approveCommunity" disabled="false" />
+			    		<p:commandButton value="Annehmen" id="approveCommunity" disabled="false" />
 			   			<f:param name="communityId" value="#{community.communityId}" />
-		     		</p:commandLink>		
+		     		</p:commandLink>
+		     		<p:commandLink update="requests" actionListener="#{requestController.declineCommunity}">	
+			    		<p:commandButton value="Ablehnen" id="declineCommunity" disabled="false" />
+			   			<f:param name="communityId" value="#{community.communityId}" />
+		     		</p:commandLink>			
 			    </p:column>
 			</p:dataTable>
 		</h:form>
