Added document library to community view
- Removed viewParams from doc lib, I hate JSF...

--- a/pse-dbmodell/src/main/webapp/protected/Community.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Community.xhtml
@@ -102,6 +102,11 @@
 						</p:panel>
 					</h:form>
 				</div>
+				<div class="ui-grid-col-5">
+					<ui:include src="DocumentLibrary.xhtml">
+					</ui:include>
+				</div>
+			
 			</div>
 		</div>
 	</ui:define>
