edit news: bugfix header text

--- a/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/chat/MessageEditorTag.xhtml
@@ -15,7 +15,7 @@
 				<p:column colspan="2">Neue Nachricht eingeben für Community <h:outputText value="#{messageEditorController.getCommunityName()}" /></p:column>
 			</p:row>
 			<p:row rendered="#{!(messageEditorController.newMessage)}">
-				<p:column colspan="2">Bearbeite Nachricht Community <h:outputText value="#{messageEditorController.getCommunityName()}" /></p:column>
+				<p:column colspan="2">Bearbeite Nachricht für Community <h:outputText value="#{messageEditorController.getCommunityName()}" /></p:column>
 			</p:row>
 			<p:row>
 				<p:column></p:column>
