set scrollheight for datascrolle

--- a/pse-dbmodell/src/main/webapp/protected/UserSearchResult.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/UserSearchResult.xhtml
@@ -7,7 +7,7 @@
 	<ui:define name="content">
 		<h:form>
 			<p:dataScroller value="#{userSearchController.result}" var="user"
-				chunkSize="10" mode="inline">
+				chunkSize="10" mode="inline" scrollHeight="1000">
 				<f:facet name="header">
             		Suchergebnis
 		       </f:facet>
