navigation from username-button to own userprofile updated

--- a/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
@@ -23,10 +23,7 @@
 						class="ui-icon ui-icon-grip-dotted-vertical" />
 					</span>
 					<p:splitButton value="#{loginController.loggedInUsername}"
-						action="/protected/User.jsf">
-						<f:param name="userName"
-							value="#{loginController.loggedInUsername}" />
-						<f:param name="mode" value="view" />
+						action="#{loginController.navigateToOwnProfile}"">
 						<p:menuitem>
 							<h:link outcome="/protected/User.jsf"
 								styleClass="ui-menuitem-link ui-corner-all">
