fixed slip of the pen

--- a/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Menu.xhtml
@@ -23,7 +23,7 @@
 						class="ui-icon ui-icon-grip-dotted-vertical" />
 					</span>
 					<p:splitButton value="#{loginController.loggedInUsername}"
-						action="#{loginController.navigateToOwnProfile}"">
+						action="#{loginController.navigateToOwnProfile}">
 						<p:menuitem>
 							<h:link outcome="/protected/User.jsf"
 								styleClass="ui-menuitem-link ui-corner-all">
