changing in LoginController update component

--- a/pse-dbmodell/src/main/webapp/protected/User.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/User.xhtml
@@ -11,7 +11,7 @@
 		<h:form id="userForm">
 			<p:growl id="messages" showDetail="true" />
 
-			<p:panelGrid style="width: 100%;">
+			<p:panelGrid id="userGrid" style="width: 100%;">
 				<p:row>
 					<p:column>			
 						<p:outputLabel value="Vorname"/>
