Add redisplay=false to messages in doc lib to prevent duplicate messages

--- a/pse-dbmodell/src/main/webapp/protected/DocumentLibrary.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/DocumentLibrary.xhtml
@@ -9,7 +9,7 @@
 		listener="#{documentLibraryController.init}" />
 	<p:panel id="documentLibraryPnl" header="Dokumentenbibliothek">
 		<h:form>
-			<p:messages autoUpdate="true" showDetail="true"/>
+			<p:messages autoUpdate="true" showDetail="true" redisplay="false"/>
 			<p:toolbar rendered="#{documentLibraryController.canEditLibrary}">
 				<f:facet name="left">
 					<p:commandButton id="uploadDocumentBtn" value="Neu"
